# CSUHackathon2026

./: .env  .env.example  .gitignore  AWS_SETUP.md  AttemptToAnalyzeDataWithGenie.ipynb  CSU_Hackathon_Prithvi_HLS_Working.ipynb  CSU_Hackathon_Problem_Statements_MRP_Geospatial_FINAL.txt  CSU_Hackathon_Trade_and_FF_Datasets.xlsx  Crop-yield.ipynb  DataExtraction.ipynb  FEATURES.md  FFED_Presentation.pptx  FFED_QA_Appendix.pptx  Final.csv  Flight_Data.ipynb  Flights_Map_Interaction.ipynb  Fruit Fly Host Lists  Animal and Plant Health Inspection Service.csv  FruitFly_Reflection_Final.pptx  Fruit_Fly_Map_Interaction.ipynb  HackathonPresentation.pptx  Info.csv  LICENSE  PHASE3_WORKFLOW.md  README.md  README_LAURA.md  RESULTS.md  Rubric  TESTING.md  Untitled_FINAL.ipynb  app.py  arcgis_bridge.py  arcgis_data.py  arcgis_enrichment.csv  arcgisinstruct.txt  bedrock_com_yield.py  build_demo.py  carsomUntitled presentation.pptx  census_data.py  city_map_generator.py  city_noaa_stations.csv  (+53 more)
.streamlit/: config.toml
configs/: project.yaml  terratorch_lora.yaml
documentation/: CSU Hackathon - Geospatial AI Crop Yield Forecasting.md  Data Source Information.md  Sentinal.md  TFT.md  USDA Yield Datasets.md  agnext.md
freightPorts/: 2020Ports.csv  2021Ports.csv  2022Ports.csv
fruitFlyProfiles/: eppo_datasheet_ANSTLU.docx  eppo_datasheet_CERTCA.docx  eppo_datasheet_DACUDO.docx
model_artifacts/: domain_knowledge.json  feature_columns.json  feature_importance.csv  feature_name_map.json  metrics.json  model.pkl  model_regression.pkl  model_risk_tier.pkl  temp_thresholds.json  training_dataset_preview.csv  xgboost_model.json
notebook/: fruitFlyAnalysis.ipynb
notebooks/: 01_sanity_check.py  composite_pipeline.ipynb  cone_uncertainty.ipynb  data_prep.ipynb  landsat_merge.ipynb  phase3_feature_fusion.ipynb  privthi_features.ipynb  run_on_sagemaker.ipynb  train_forecast.ipynb
progress/: mini-iowa.md  run-log.md
research/: 2026-04-25-overfitting-graphs.md  2026-04-25-robustness.md
scripts/: build_presentation.py  build_qa_appendix.py  data_api.py  download_all.py  make_validation_slide_visual.py  rebuild_premium_figures.py
software/: SPEC.md  (+5 more)
(+119 files in other folders)
